--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
   },
   "homepage": "https://github.com/AleksandarBayrev/gdrive-download#readme",
   "devDependencies": {
+    "@types/command-exists": "~1.2.0",
     "@types/node": "~18.14.0",
     "@webpack-cli/generators": "~3.0.1",
     "shx": "^0.3.4",
     "typescript": "~4.9.5",
     "webpack": "~5.75.0",
     "webpack-cli": "~5.0.1"
+  },
+  "dependencies": {
+    "command-exists": "~1.2.9"
   }
 }
